--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -29,9 +29,7 @@ packages = find:
 python_requires = >=3.7
 install_requires = 
     click>=8.0.3
-    PyYaml>=6.0
-    python-dateutil>=2.8.2
-    marko>=1.1.0
+    ortools>=9.1.9490
 
 [options.entry_points]
 console_scripts =
