--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: [macos-latest, windows-latest, ubuntu-latest]
-        # python: ["3.7", "3.8", "3.9", "3.10"]
-        os: [ubuntu-latest]
-        python: ["3.7"]
+        os: [macos-latest, windows-latest, ubuntu-latest]
+        python: ["3.7", "3.8", "3.9", "3.10"]
+        # os: [ubuntu-latest]
+        # python: ["3.7"]
         experimental: [false]
         # include:
         #   - os: ubuntu-latest
